--- a/billing/docker-compose.yml
+++ b/billing/docker-compose.yml
@@ -77,14 +77,21 @@ services:
       DEFAULT_TRIAL_DAYS: 14
       
       # Kubernetes deployment
-      BASE_DOMAIN: iotistic.ca
+      BASE_DOMAIN: localhost  # Use localhost for Docker Desktop K8s
       HELM_CHART_PATH: /app/charts/customer-instance
-      # Set to 'true' for local testing without K8s cluster (simulates deployment)
+      # Set to 'false' to use real K8s (Docker Desktop or AKS)
       SIMULATE_K8S_DEPLOYMENT: ${SIMULATE_K8S_DEPLOYMENT:-true}
+      # Kubeconfig path (mounted from host)
+      KUBECONFIG: /root/.kube/config
+      # Use docker-desktop context
+      KUBE_CONTEXT: docker-desktop
     volumes:
       - ./keys:/app/keys
       - ./dist:/app/dist
       - ../charts:/app/charts
+      # Mount kubeconfig for K8s access (Windows: %USERPROFILE%/.kube)
+      # This includes both docker-desktop and any cloud clusters
+      - ${USERPROFILE}/.kube/config:/root/.kube/config:ro
     depends_on:
       postgres:
         condition: service_healthy
