Implement customer instance upgrade system with API, scripts, and database schema
- Added UPGRADE-SYSTEM.md documentation for upgrade workflow and strategies.
- Created upgrade-customers.ps1 script for managing upgrades via PowerShell.
- Developed upgrade routes in Express for initiating and monitoring upgrades.
- Implemented UpgradeService for handling upgrade logic and database interactions.
- Added PostgreSQL initialization job for setting up MQTT database schema.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,6 +12,9 @@ RUN npm install
 # Copy source code
 COPY src ./src
 
+# Copy database migrations (needed at runtime)
+COPY database ./database
+
 # Build TypeScript
 RUN npm run build
 
