--- a/charts/customer-instance/templates/secrets.yaml
+++ b/charts/customer-instance/templates/secrets.yaml
@@ -22,4 +22,8 @@ stringData:
   CUSTOMER_ID: {{ .Values.customer.id | quote }}
   CUSTOMER_EMAIL: {{ .Values.customer.email | quote }}
   CUSTOMER_COMPANY: {{ .Values.customer.companyName | quote }}
+  
+  # MQTT credentials for API service
+  MQTT_USERNAME: {{ .Values.mosquitto.credentials.username | quote }}
+  MQTT_PASSWORD: {{ include "customer-instance.mqttPassword" . | quote }}
 {{- end }}
