--- a/.github/workflows/build-exporter.yml
+++ b/.github/workflows/build-exporter.yml
@@ -1,16 +1,16 @@
-name: Build and Push Api Image
+name: Build and Push Billing Exporter Image
 
 on: 
   push:
     branches:
       - master
     paths:
-      - 'api/**' 
-      - '.github/workflows/build-Iotistic-api.yml'
+      - 'billing-exporter/**' 
+      - '.github/workflows/build-exporter.yml'
 
 jobs:
   buildx:
-    name: Build & Push Api Image
+    name: Build & Push Billing Exporter Image
     runs-on: ubuntu-24.04
     strategy:
       matrix:
@@ -31,9 +31,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache/${{ matrix.board }}
-          key: buildx-api-${{ matrix.board }}-${{ github.sha }}
+          key: buildx-exporter-${{ matrix.board }}-${{ github.sha }}
           restore-keys: |
-            buildx-api-${{ matrix.board }}-
+            buildx-exporter-${{ matrix.board }}-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -41,14 +41,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build & Push API image
+      - name: Build & Push Billing Exporter image
         uses: docker/build-push-action@v5
         with:
-          context: ./api
-          file: ./api/Dockerfile
+          context: ./billing-exporter
+          file: ./billing-exporter/Dockerfile
           push: true
           platforms: ${{ matrix.platform }}
           cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
           cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
-            iotistic/api:latest
+            iotistic/exporter:latest
