Enhance LicenseValidator: Add validation for LICENSE_PUBLIC_KEY and ensure PEM format; update default MQTT username to 'admin'

--- a/charts/customer-instance/values.yaml
+++ b/charts/customer-instance/values.yaml
@@ -61,7 +61,7 @@ mosquitto:
     logLevel: info
   # Default MQTT credentials for API service
   credentials:
-    username: "api_user"
+    username: "admin"
     password: ""  # Auto-generated if empty
 
 # API service
