--- a/charts/customer-instance/templates/secrets.yaml
+++ b/charts/customer-instance/templates/secrets.yaml
@@ -7,8 +7,9 @@ metadata:
     {{- include "customer-instance.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  # License key
+  # License key and public key for validation
   IOTISTIC_LICENSE_KEY: {{ .Values.license.key | quote }}
+  LICENSE_PUBLIC_KEY: {{ .Values.license.publicKey | quote }}
   
   # PostgreSQL credentials
   POSTGRES_USER: {{ .Values.postgres.username | quote }}
