Enhance Docker Compose and K8s deployment: Add LICENSE_PUBLIC_KEY for injection, disable exporter in values.yaml, and update upgrade service handling in deployment worker

--- a/billing/docker-compose.yml
+++ b/billing/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       # License keys
       LICENSE_PRIVATE_KEY_PATH: ${LICENSE_PRIVATE_KEY_PATH}
       LICENSE_PUBLIC_KEY_PATH: ${LICENSE_PUBLIC_KEY_PATH}
+      LICENSE_PUBLIC_KEY: ${LICENSE_PUBLIC_KEY}  # For K8s deployment injection
 
       # Trial configuration
       DEFAULT_TRIAL_DAYS: 14
