Add MQTT Prometheus exporter deployment and service configuration
- Created Kubernetes deployment for mqtt-exporter with necessary environment variables and resource limits.
- Added Service to expose the metrics endpoint.
- Included ServiceMonitor for Prometheus to scrape metrics from the mqtt-exporter.
- Initialized package.json and package-lock.json for mqtt-prometheus-exporter with required dependencies.

--- a/charts/customer-instance/templates/mosquitto.yaml
+++ b/charts/customer-instance/templates/mosquitto.yaml
@@ -28,6 +28,10 @@ data:
     log_type notice
     log_type information
     
+    # System statistics publishing (required for metrics exporter)
+    # Publishes broker stats to $SYS/# topics every 10 seconds
+    sys_interval 10
+    
     # Load Go-Auth plugin
     auth_plugin /mosquitto/go-auth.so
     
