--- a/billing/package.json
+++ b/billing/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "ioredis": "^5.8.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "stripe": "^14.9.0",
@@ -44,6 +45,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.22",
     "@types/pg": "^8.10.9",
