--- a/.github/workflows/build-mqtt-exporter.yml
+++ b/.github/workflows/build-mqtt-exporter.yml
@@ -33,7 +33,7 @@ jobs:
           path: /tmp/.buildx-cache/${{ matrix.board }}
           key: buildx-mqtt-exporter-${{ matrix.board }}-${{ github.sha }}
           restore-keys: |
-            buildx-exporter-${{ matrix.board }}-
+            buildx-mqtt-exporter-${{ matrix.board }}-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
