feat(opencost): Add OpenCost Helm chart for Kubernetes cost monitoring
- Introduced OpenCost Quick Start Guide for easy deployment and verification.
- Created README.md detailing features, architecture, key metrics, installation, and usage.
- Implemented deploy.ps1 script for automated deployment to the monitoring namespace.
- Added Kubernetes deployment, service, service account, and ServiceMonitor templates.
- Configured values.yaml for customizable deployment options including cloud provider integration and pricing.
- Included example Prometheus queries for cost tracking and integration with billing systems.
- Added troubleshooting section for common issues and solutions.
- Implemented Grafana dashboard examples for visualizing customer costs.
- Created a ConfigMap for customer-specific Prometheus configuration.

--- a/charts/customer-instance/templates/prometheus-dedicated.yaml
+++ b/charts/customer-instance/templates/prometheus-dedicated.yaml
@@ -89,6 +89,16 @@ data:
           service: 'postgres'
           customer_id: {{ .Values.customer.id | quote }}
     {{- end }}
+    
+    {{- if .Values.opencost.enabled }}
+    # OpenCost - infrastructure cost metrics
+    - job_name: 'opencost'
+      static_configs:
+      - targets: ['{{ include "customer-instance.fullname" . }}-opencost:{{ .Values.opencost.service.port }}']
+        labels:
+          service: 'opencost'
+          customer_id: {{ .Values.customer.id | quote }}
+    {{- end }}
 ---
 apiVersion: apps/v1
 kind: Deployment
