feat(k3s-driver): integrate Kubernetes client and implement service reconciliation logic
- Added @kubernetes/client-node dependency to package.json.
- Refactored k3s-driver.ts to dynamically import Kubernetes client for CommonJS/ESM compatibility.
- Implemented service reconciliation logic, including creation, updating, and removal of services based on target state.
- Enhanced error handling and logging during reconciliation.
- Implemented methods for stopping, removing, restarting, and retrieving service status and logs.

--- a/agent/package.json
+++ b/agent/package.json
@@ -42,6 +42,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@kubernetes/client-node": "^1.4.0",
     "@types/mqtt": "^0.0.34",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
