feat: Implement flexible API URL configuration for dashboard
- Added `apiUrl` field in `values.yaml` for custom API URL settings.
- Updated `dashboard.yaml` to inject API URL as an annotation.
- Refactored API calls in components to use `buildApiUrl` for dynamic URL resolution.
- Introduced `api.ts` for centralized API URL management.
- Created `.env.example` for environment variable configuration.
- Documented API configuration in `API_CONFIGURATION.md`.

--- a/charts/customer-instance/templates/dashboard.yaml
+++ b/charts/customer-instance/templates/dashboard.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     {{- include "customer-instance.labels" . | nindent 4 }}
     app.kubernetes.io/component: dashboard
+  annotations:
+    # API URL is injected at build time via Dockerfile ARG
+    # Dashboard uses relative path "/api" since it shares ingress with API
+    dashboard.iotistic.io/api-url: {{ .Values.dashboard.apiUrl | default "" | quote }}
 spec:
   replicas: {{ .Values.dashboard.replicas }}
   selector:
@@ -24,11 +28,6 @@ spec:
         ports:
         - name: http
           containerPort: {{ .Values.dashboard.port }}
-        env:
-        - name: API_URL
-          value: http://{{ include "customer-instance.fullname" . }}-api:{{ .Values.api.port }}
-        - name: MQTT_URL
-          value: ws://{{ include "customer-instance.fullname" . }}-mosquitto:{{ .Values.mosquitto.ports.websocket }}
         resources:
           {{- toYaml .Values.dashboard.resources | nindent 10 }}
         livenessProbe:
