feat: Add automatic default target state configuration for devices
- Introduced a new feature that automatically assigns a default target state during device provisioning based on the license plan.
- Added documentation for quick start guide on testing the new feature.
- Implemented migration script to apply default target states to existing devices.
- Updated relevant API routes and services to support automatic target state creation.
- Enhanced license configuration verification and troubleshooting steps.

--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "migrate:status": "ts-node scripts/migrate.ts status",
     "migrate:create": "ts-node scripts/migrate.ts create",
     "migrate:mark-applied": "ts-node scripts/mark-migrations-applied.ts",
-    "migrate:unmark": "ts-node scripts/unmark-migrations.ts"
+    "migrate:unmark": "ts-node scripts/unmark-migrations.ts",
+    "apply-default-target-state": "ts-node src/scripts/apply-default-target-state.ts"
   },
   "keywords": [
     "iot",
