--- a/agent/package.json
+++ b/agent/package.json
@@ -5,10 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && npm run copy:migrations",
+    "build": "tsc && npm run copy:migrations && npm run build:adapters",
+    "build:adapters": "cd adapters && tsc",
     "copy:migrations": "node -e \"require('fs').cpSync('src/migrations', 'dist/migrations', {recursive: true})\"",
     "watch": "tsc --watch",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist && rimraf protocol-adapters/dist",
     "dev": "tsx watch src/app.ts",
     "dev:cloud": "tsx watch src/api/cloud-server.ts",
     "dev:old-api": "tsx watch src/api/server.ts",
@@ -52,6 +53,7 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fp-ts": "^2.16.5",
     "io-ts": "2.2.20",
@@ -59,6 +61,7 @@
     "livepush": "^2.0.0",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.17",
+    "modbus-serial": "^8.0.17",
     "mqtt": "^5.14.1",
     "network-checker": "^1.0.6",
     "sqlite3": "^5.1.6",
@@ -66,6 +69,7 @@
     "systeminformation": "^5.23.5",
     "typed-error": "^3.2.1",
     "uuid": "^13.0.0",
+    "yargs": "^17.7.2",
     "zod": "^3.22.0"
   },
   "devDependencies": {
@@ -80,6 +84,7 @@
     "@types/lodash": "^4.17.0",
     "@types/memoizee": "^0.4.12",
     "@types/node": "^22.18.9",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
